# arm101-cli

./: .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  README.md  arm-explore-follower.events.jsonl  arm-explore-follower.map.json  culture.yaml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.devague/: current  current_plan
.devague/frames/: arm-explore-now-maps-the-arm-s-real-joint-space-it.json  arm101-arm-motion-is-overload-safe-it-never-trips.json  arm101-can-read-the-whole-arm-s-live-state-and-fle.json  arm101-cli-grows-its-first-hardware-verbs-arm101-f.json  arm101-finds-its-own-joint-limits-a-new-gated-verb.json  arm101-now-maps-its-own-reach-arm-explore-safely-d.json  arm101-s-gated-write-hardware-verbs-set-motor-id-c.json  arm101-s-gentle-move-now-actually-measures-the-arm.json  arm101-setup-motors-now-routes-through-the-three-m.json  arm101-ships-role-aware-arm-setup-one-command-sets.json
.devague/plans/: arm-explore-now-maps-the-arm-s-real-joint-space-it.json  arm101-arm-motion-is-overload-safe-it-never-trips.json  arm101-can-read-the-whole-arm-s-live-state-and-fle.json  arm101-cli-grows-its-first-hardware-verbs-arm101-f.json  (+6 more)
.github/workflows/: tests.yml  (+1 more)
arm101/: __init__.py  __main__.py
docs/: RESUME-HERE.md  hardware-rezero-procedure.md  hardware-rezero-run-2026-07-12.md  hardware-test-log.md  hardware-validation-arm-explore.md  hardware-validation-arm-read-flex.md  hardware-validation-arm-setup.md  hardware-validation.md  skill-sources.md
scripts/: probe_gentle_timing.py
tests/: _fakes.py  _journal_subject.py  _rolling_servo.py  conftest.py  test_arm.py  test_arm_explore_cli.py  test_arm_limits_cli.py  test_arm_limits_commit.py  test_arm_overload.py  test_arm_profile_cli.py  test_arm_read.py  test_arm_read_flex.py  test_arm_rezero_cli.py  test_arm_safety.py  test_arm_spec.py  test_baud_probe.py  test_bus.py  test_bus_offset.py  test_bus_overload.py  test_bus_read_robustness.py  test_calibrate.py  test_calibrate_motor.py  test_calibration_journal.py  test_calibration_journal_sigkill.py  test_center_motor.py  test_classify.py  test_cli.py  test_cli_introspection.py  test_consent.py  test_demo.py  test_demo_overload.py  test_doctor_probe.py  test_eeprom_limit_write_guard.py  test_explore_budget.py  test_explore_default_map.py  test_explore_engine.py  test_explore_escape.py  test_explore_grid.py  test_explore_log.py  test_explore_reachmap.py  (+33 more)
(+79 files in other folders)
