[project]
name = "arm101-cli"
version = "0.17.0"
description = "Agent and CLI for controlling SO-ARM101 robotic arm grippers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
# Real motor I/O for the Seeed Studio SO-101 kit:
#   pip install '.[seeed]'   or   uv sync --extra seeed
# Named by the kit provider (Seeed), not the motor vendor: the kit currently
# ships Feetech STS3215 servos (PyPI feetech-servo-sdk, import scservo_sdk), and
# the CLI verifies each connected motor really is a Feetech (model 777) at
# runtime — so a future kit revision with a different servo vendor just updates
# this extra without renaming it.
seeed = ["feetech-servo-sdk>=1.0"]
# Placeholder for future macOS serial support
mac = ["pyserial>=3.5"]
# Placeholder for future Windows serial support
win = ["pyserial>=3.5"]

[project.urls]
Homepage = "https://github.com/agentculture/arm101-cli"
Issues = "https://github.com/agentculture/arm101-cli/issues"

[project.scripts]
arm101 = "arm101.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arm101"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "bandit>=1.7.5",
    "flake8>=6.1",
    "isort>=5.12.0",
    "black>=23.7.0",
    "teken>=0.8",
]

[tool.coverage.run]
source = ["arm101"]
omit = ["arm101/__pycache__/*"]
# Emit repo-relative paths in coverage.xml so SonarCloud maps them to
# sonar.sources=arm101 (absolute/.venv paths fail to map → empty coverage).
relative_files = true

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["arm101"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B404", "B603"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
